--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,9 @@
 .container{
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: 1fr 7fr;
   text-align: center;
+  height:100vh;
 }
 
 /* header start */
@@ -33,12 +34,62 @@
 
 .sidebar{
   background-color: rgba(59, 191, 224, 0.678);
+  grid-column: 1/2;
+  grid-row:2/3;
 }
+
+.theme-books {
+  --fa-secondary-color: var(--white);
+  --fa-secondary-opacity: 1.0;
+}
+#logo {
+  margin: 0 0 20px 0;
+  font-family: "MarcellusSC-Regular", "Times New Roman", Georgia, Serif;
+  font-size: 40px;
+  color: var(--blue);
+  text-align: center;
+}
+
 
 /* sidebar stop */
 
 /* main start */
 
+.main{
+  grid-column:2/3;
+  grid-row:2/3;
+}
+
+.library-status{
+  border: solid 2px rgba(24, 77, 104, 0.8);
+  width: max-content;
+  margin-top: 1rem;
+  padding: 0.5rem 2rem;
+  border-radius: 3px;
+  text-align: center;
+  color: rgba(24, 77, 104, 0.8);
+  position: relative;
+}
+
+.library-status > h2 {
+  font-size: 1.5rem;
+  text-align: center;
+  padding-bottom: 0.8rem;
+}
+
+.library-status > div h3 {
+  margin-right: 30px;
+  font-size: 1.1rem;
+  margin-bottom:3px;
+  text-align: left;
+}
+
+#delete-all-btn{
+  color: white;
+  background-color: rgb(222, 55, 55);
+  border-radius: 2px;
+  padding:12px;
+}
 /* main stop */
 
 
