--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 .App-name{
   font-weight: bold;
   font-size: 24px;
-  margin-top:15px;
+  align-self: center;
   position: absolute;
   /* new */
   left: 50%;
