--- a/styles.css
+++ b/styles.css
@@ -242,7 +242,7 @@ form{
   transition: 0.3s;
 }
 
-#delete-all-btn:hover{
+#delete-all-btn:hover, .removeBtn:hover{
   cursor: pointer;
   border-color: rgb(101, 27, 27);
   background-color: rgb(101, 27, 27);
@@ -299,7 +299,26 @@ form{
   color: var(--dark-red);
 }
 
+.readBtn{
+  color: white;
+  background-color: rgb(226, 89, 15);
+  font-size: 16px;
+  font-weight:bold;
+  border-radius: 4px;
+  padding:10px;
+  width:90px;
+}
 
+.removeBtn{
+  color: white;
+  background-color: rgb(222, 55, 55);
+  font-size: 16px;
+  font-weight:bold;
+  border-radius: 4px;
+  border: 1px solid rgb(222, 55, 55);
+  padding:10px;
+  width:90px;
+}
 /* main stop */
 
 
@@ -307,7 +326,7 @@ button:focus {
   outline: none;
 }
 
-button:hover {
+button#add-book:hover {
 	background: rgb(164, 196, 241);
 	color: #000;
 }
