adding changeBookStatus function in order to modify the reading property of a book by clicking on the button

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ form{
   background-color: rgba(21, 73, 146, 0.0);
   border: none;
   border-bottom: 2px dotted;
-  color: var(--blue);
+  color: black;
 }
 
 
