--- a/styles.css
+++ b/styles.css
@@ -275,7 +275,8 @@ form{
 
 .book-info i:hover,
 .close-modal:hover,
-.cancel-removal:hover {
+.cancel-removal:hover,
+button#erase:hover {
   cursor: pointer;
 }
 
@@ -339,4 +340,70 @@ button#delete:hover {
 button#erase:hover {
   background:rgb(230, 93, 93);
   color: #000;
+}
+
+/* MODAL STYLE */
+#modal {
+  display: none;
+  position: fixed;
+  padding-top: 45px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-card {
+  position: relative;
+  margin: auto;
+  width: 30%;
+  border: 2px solid rgba(21, 73, 146, 1);
+  border-radius: 2px;
+  box-shadow: rgb(46, 46, 46, 0.2) 0px 2px 8px 0px;
+}
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  background-color:rgba(21, 73, 146, 1);
+  color: var(--white);
+}
+.modal-header h2 {
+  margin: 0;
+  padding: 20px;
+}
+.close-modal {
+  align-self: flex-start;
+  margin: 0 20px 0 0;
+  color: var(--white);
+  font-size: 30px;
+  font-weight: 900;
+}
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  background-color: var(--white);
+}
+.modal-options {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 20px;
+}
+.cancel-removal {
+  border: none;
+  background-color: transparent;
+  color: black;
+}
+.confirm-removal {
+  height: 40px;
+  margin-left: 15px;
+  padding: 0 10px;
+  font-weight: 600;
+  background-color: rgb(222, 55, 55);
+  color: var(--white);
+  border: 1px solid rgb(222, 55, 55);
+  border-radius: 4px;
+  transition: 0.3s;
 }
